objects/EAD_Notification__c.object
<CustomObject>
    <description>Here it can specified period of time after which system will generate notification to the opportunity owner. Values may vary for different stages. If no value is specified notification won’t be generated</description>
    <fields>
        <fullName>Bidding_Value__c</fullName>
        <label>Bidding Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bidding__c</fullName>
        <label>Bidding</label>
        <picklist>
            <picklistValues>
                <fullName>No notifications</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Negotiation_Value__c</fullName>
        <label>Negotiation Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiation__c</fullName>
        <label>Negotiation</label>
        <picklist>
            <picklistValues>
                <fullName>No notifications</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>EAD Notifications</relationshipLabel>
        <relationshipName>EAD_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Product_Group_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Product Group Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Prospect_Value__c</fullName>
        <label>Prospect Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <label>Prospect</label>
        <picklist>
            <picklistValues>
                <fullName>No notifications</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pursuit_Value__c</fullName>
        <label>Pursuit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pursuit__c</fullName>
        <label>Pursuit</label>
        <picklist>
            <picklistValues>
                <fullName>No notifications</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>EAD Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EAD Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EAD Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bidding_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT( ISPICKVAL(Bidding__c, &apos;No notifications&apos;) ), ISBLANK( Bidding_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Bidding_Value__c</errorDisplayField>
        <errorMessage>Please specify the Bidding Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negotiation_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT( ISPICKVAL(Negotiation__c, &apos;No notifications&apos;) ), ISBLANK( Negotiation_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Negotiation_Value__c</errorDisplayField>
        <errorMessage>Please specify the Negotiation Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prospect_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT( ISPICKVAL(Prospect__c, &apos;No notifications&apos;) ), ISBLANK( Prospect_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Prospect_Value__c</errorDisplayField>
        <errorMessage>Please specify the Prospect Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pursuit_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
NOT( ISPICKVAL(Pursuit__c, &apos;No notifications&apos;) ), ISBLANK( Pursuit_Value__c ) )</errorConditionFormula>
        <errorDisplayField>Pursuit_Value__c</errorDisplayField>
        <errorMessage>Please specify the Pursuit Value.</errorMessage>
    </validationRules>
</CustomObject>